fix safari z-index bug for scrolly steps

--- a/src/ScrollBody.css
+++ b/src/ScrollBody.css
@@ -4,6 +4,10 @@
     padding:0;
     margin: 0 10%;
     height: 100%;
+    z-index: 1;
+    -webkit-transform: translate3d(0, 0, 0);
+    -moz-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
 }
 
 .map{
